# Excel2ReportParser

./: .dockerignore  .env.example  .gitignore  ALL_PHASES_SUMMARY.txt  ALL_RISK_LEVELS_GUIDE.md  ALL_UPDATES_COMPLETE.md  API.md  ARCHITECTURE.md  All_Risk_Levels_Template.xlsx  BACKEND_INTEGRATION_VERIFIED.txt  BUGFIX_SUMMARY_TABLE_ROOT_CAUSE.md  CACHE_CLEANUP_CHEATSHEET.md  CACHE_CLEANUP_GUIDE.md  CHANGES_SUMMARY.txt  COMPREHENSIVE_FIX_SUMMARY.md  CREATE_TEMPLATE_INSTRUCTIONS.md  DATA_MISMATCH_FIX.md  DEPLOYMENT.md  DOCKER.md  DOCKER_DEPLOYMENT.md  Dockerfile  FILES.md  FINAL_COMPREHENSIVE_FIX.md  FINAL_FIX_SUMMARY.md  FINAL_SUMMARY.txt  FIXES_APPLIED.txt  FRONTEND_FIX_SUMMARY.txt  FRONTEND_IMPLEMENTATION.md  FRONTEND_LAYOUT_FIX.md  IMAGE_SIZE_UPDATE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  MIGRATION_QUICK_GUIDE.md  PHASE1_BOTH_TEMPLATES.md  PHASE1_CHANGES_SUMMARY.txt  PHASE1_FINAL_UPDATE.txt  PHASE1_UPDATE.md  PHASE3_COMPLETE.txt  PHASE3_IMPLEMENTATION.md  PHASE3_QUICK_START.md  (+43 more)
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  cleanup.py  phase1.py  phase2.py  phase3.py
app/core/: config.py  exceptions.py  logging.py
app/models/: __init__.py  vulnerability.py
app/services/phase1/: __init__.py  (+2 more)
app/utils/: __init__.py  file_utils.py  validators.py
frontend/: .dockerignore  All_Risk_Levels_Template.xlsx  Dockerfile  README.md  WAPT-Rootnik-Technical.docx  app.py
frontend/templates/: base.html  index.html  phase1.html  phase2.html  phase3.html
templates/: SAMPLE_EXCEL_FORMAT.md  TEMPLATE_GUIDE.md
(+5 files in other folders)
